examples/test/testpolicy11653.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11653
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key49: value26
      key15: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value8
      podSelector:
        matchLabels:
          key40: value1
          key16: value25
